# chatvault

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
chatvault-sdk/: setup.py
chatvault-sdk/chatvault/: __init__.py  models.py
dev_notes/changes/: 2025-12-24_19-17-42_step6-chat-completions-streaming.md  2025-12-24_19-27-27_project-implementation-completion.md  2025-12-25_21-48-05_directory-structure-refactor-completion.md  2025-12-25_22-25-10_chatvault-cli-implementation.md  2025-12-25_23-10-59_cv-tester-implementation.md  2025-12-25_23-22-00_cli-server-integration.md  2025-12-26_00-01-44_fix-relative-imports-cv-tester-installation.md  2025-12-26_00-06-48_fix-sqlalchemy-execute-error.md  2025-12-26_02-36-08_phase1-core-usage-billing-system-implementation.md  2025-12-26_02-39-19_phase2-enhanced-security-authentication.md  2025-12-26_03-02-10_phase3-monitoring-observability-implementation.md  2025-12-26_03-06-50_phase4-advanced-model-routing-implementation.md  2025-12-26_03-11-26_phase5-api-documentation-developer-experience-implementation.md  2026-02-01_09-03-26_bootstrap-integration-complete.md
dev_notes/project_plans/: 2025-12-24_19-19-12_chatvault-initial-implementation.md  2025-12-25_21-41-48_directory-structure-refactor.md  2025-12-25_22-15-43_chatvault-cli-implementation.md  2025-12-25_22-56-32_cv-tester-testing-tool.md  2025-12-25_23-18-00_cli-server-integration.md  2025-12-25_23-58-11_fix-relative-imports-cv-tester-installation.md  2025-12-26_00-04-23_fix-sqlalchemy-execute-error.md  2025-12-26_02-30-42_remaining-features-implementation.md
doc/: ARCHITECTURE.md  DEPLOYMENT.md  testing.md
docs/: README.md  architecture.md  definition-of-done.md  deployment.md  implementation-reference.md  mandatory.md  templates.md  testing.md  workflows.md
docs/system-prompts/: README.md  bootstrap.py  docscan.py
migrations/: 20251224_191453_initial_schema.py  20251226_023507_add_error_details_to_usage_logs.py
src/: cli.py  cli_config.py  cli_logging.py  cli_server.py  config.py  litellm_router.py  main.py  streaming_handler.py
src/chatvault/: auth.py  cli.py  cli_auth.py  cli_config.py  config.py  cv_tester.py  database.py  demo.py  litellm_router.py  load_balancer.py  main.py  metrics.py  model_selector.py  models.py  rate_limiter.py  tracing.py
tests/: test_cv_tester.py
